<resources>
    <string name="app_name">PasswordManager</string>
    <string name="google">Google</string>
    <string name="star">******</string>
    <string name="no_account_details_found">No account details found</string>
    <string name="add">add</string>
    <string name="account_name">Account Name</string>
    <string name="username">Username/ Email</string>
    <string name="password">Password</string>
    <string name="add_new_account">Add New Account</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="account_details">Account Details</string>
</resources>